--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-button  (click)="goBack()">
+      <ion-icon name="chevron-back-sharp"></ion-icon>
+    </ion-button>
+    </ion-buttons>
+    
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list class="ion-margin ion-text-center">
+    <div class="logo-container">
+      <img src="assets/icon/Filogo.png" class="logo">
+    </div>
+    <ion-button color="white" expand="block" shape="round" routerLink="user-login">Login with Username</ion-button>
+    
+  </ion-list>
 </ion-content>
