Updated repository link

--- a/src/app/home/dashboard/dashboard.page.html
+++ b/src/app/home/dashboard/dashboard.page.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="end" >
@@ -38,6 +39,7 @@
       </div>
     </div>
   </div>
+  
   <div class="earn-section">
     <p>Earn up to ₹1000/month</p>
   </div>
