--- a/src/app/home/user-login/user-login.page.html
+++ b/src/app/home/user-login/user-login.page.html
@@ -6,20 +6,57 @@
       </ion-fab-button>
     </ion-fab>
   </div>
-  <ion-list lines="none" class="ion-margin">
-    <ion-list-header>WELCOME !</ion-list-header>
-    <ion-item class="ion-margin">
-      <ion-input placeholder="Enter Username" type="text" clearInput="true" [(ngModel)]="username"></ion-input>
-    </ion-item>
-    <ion-item class="ion-margin">
-      <ion-input placeholder="Enter Password" type="password" clearInput="true"  [(ngModel)]="password"></ion-input>
-    </ion-item>
-    <ion-text color="medium"><p class="ion-margin-horizontal">Forgot Password?</p></ion-text>
-    <div align="right" >
-      <ion-button shape="round" strong="true" class="ion-margin-end" color="plant"   (click)="onLogin()">
-        SIGN IN
-        <ion-icon name="log-in" slot="end"></ion-icon>
-      </ion-button>
-    </div>
-  </ion-list>
+  <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
+    <ion-list lines="none" class="ion-margin">
+      <ion-list-header>WELCOME!</ion-list-header>
+
+      <!-- Username field -->
+      <ion-item class="ion-margin">
+        <ion-input 
+          placeholder="Enter Username" 
+          type="text" 
+          clearInput="true" 
+          [(ngModel)]="username" 
+          name="username" 
+          required>
+        </ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="loginForm.submitted && !username">
+        *Email is required
+      </ion-text>
+
+      <!-- Password field -->
+      <ion-item class="ion-margin">
+        <ion-input 
+          placeholder="Enter Password" 
+          type="password" 
+          clearInput="true" 
+          [(ngModel)]="password" 
+          name="password" 
+          required>
+        </ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="loginForm.submitted && !password">
+        *Password is required
+      </ion-text>
+
+      <!-- Forgot Password -->
+      <ion-text color="medium">
+        <p class="ion-margin-horizontal">Forgot Password?</p>
+      </ion-text>
+
+      <!-- Sign In Button -->
+      <div align="right">
+        <ion-button 
+          shape="round" 
+          strong="true" 
+          class="ion-margin-end" 
+          color="plant" 
+          type="submit">
+          SIGN IN
+          <ion-icon name="log-in" slot="end"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-list>
+  </form>
 </ion-content>
